# skn-rust-practice

./: .gitignore  Cargo.toml  cmd.sh  hello.txt  rustenv.toml  rustenv.yaml
src/: main.c  main.cpp  main.rs
src/libs/: mod.rs
src/libs/components/: access.rs  access.type.rs  adult.type.rs  grocery.type.rs  input.rs  menu.rs  menu.type.rs  mod.rs  random.rs  selection.rs  selection.type.rs  stock.type.rs  user.rs  user.type.rs
src/libs/functions/: option.rs
src/libs/utils/: env.rs  execution.rs  message.rs  mod.rs  stdio.rs
src/tests/: example.rs  example.test.rs  factorial.rs  factorial.test.rs  mod.rs
