[package]
name = "skn-rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
config = "0.14.0"
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.8"
lazy-regex = "3.1.0"

# console = "0.15.8"
# dialoguer = "0.11.0"
# lazy-regex = "3.1.0"
[dev-dependencies]
# cargo-modules = "0.13.6"
pretty_assertions = "1.4.0"
# cargo-modules = "0.13.6"
# indicatif = "0.17.8"
# pretty_assertions = "1.4.0"
