[package]
name = "skn-rust-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
config = { version = "0.14.0", features = ["toml", "yaml"] }
console = "0.15.8"
dialoguer = "0.11.0"
indicatif = "0.17.8"
lazy-regex = "3.1.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
unicode-segmentation = "1.11.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
